--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "resume-website",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/runtime": "^7.19.0",
-    "@emailjs/browser": "^3.7.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.56",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
-    "bootstrap": "^5.2.1",
-    "cors": "^2.8.5",
-    "emailjs": "^4.0.1",
-    "emailjs-com": "^3.2.0",
-    "express": "^4.18.1",
-    "nodemailer": "^6.7.8",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-bootstrap-icons": "^1.8.4",
-    "react-dom": "^18.2.0",
-    "react-multi-carousel": "^2.8.2",
-    "react-router-dom": "^6.4.0",
-    "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1",
-    "react-touch-carousel": "^0.10.2",
-    "typescript": "^4.8.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-router-hash-link": "^2.4.5"
-  }
+    "name": "resume-website",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://freedmk.github.io",
+    "dependencies": {
+        "@babel/runtime": "^7.19.0",
+        "@emailjs/browser": "^3.7.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.11.56",
+        "@types/react": "^18.0.18",
+        "@types/react-dom": "^18.0.6",
+        "bootstrap": "^5.2.1",
+        "cors": "^2.8.5",
+        "emailjs": "^4.0.1",
+        "emailjs-com": "^3.2.0",
+        "express": "^4.18.1",
+        "nodemailer": "^6.7.8",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.5.0",
+        "react-bootstrap-icons": "^1.8.4",
+        "react-dom": "^18.2.0",
+        "react-multi-carousel": "^2.8.2",
+        "react-router-dom": "^6.4.0",
+        "react-router-hash-link": "^2.4.3",
+        "react-scripts": "^5.0.1",
+        "react-touch-carousel": "^0.10.2",
+        "typescript": "^4.8.2",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-router-hash-link": "^2.4.5",
+        "gh-pages": "^4.0.0"
+    }
 }
